k8s/service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: retro-board
  labels:
    name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        cputype: amd64
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: registry.chewedfeed.com/retro-board/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: retro-board
  labels:
    app: backend
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: backend
