k8s/networking.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: retro-board
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: acme-prod
  labels:
    app: backend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.retro-board.it
      secretName: retro-board-backend-tls
  rules:
    - host: api.retro-board.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: retro-board
  name: websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_cache_bypass $http_upgrade;
      }
    cert-manager.io/cluster-issuer: acme-prod
  labels:
    app: backend
spec:
  ingressClassName: nginx
  rules:
    - host: ws.retro-board.it
      http:
        paths:
          - path: /
            backend:
              service:
                name: backend
                port:
                  number: 3000
  tls:
    - hosts:
        - ws.retro-board.it
      secretName: retro-board-ws-tls
